# geoip2-rs-awdb

./: Cargo.toml  LICENSE  README.md
benches/: geoip.rs
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs
examples/: lookup.rs
src/: decoder.rs  lib.rs  metadata.rs  models.rs  reader.rs
tests/: awdb.rs  dbip.rs  geoip.rs
