[package]
name = "geoip2-awdb"
version = "0.1.8"
# 作者联系方式
authors = ["name <name@xxx.xxx>"]
description = "Library for reading MaxMind DB format used by GeoIP2 and GeoLite2. Add ability for reading Awdb"
readme = "README.md"
keywords = ["MaxMind", "GeoIP2", "GeoIP", "geolocation", "ip", "awdb"]
categories = ["database", "network-programming"]
homepage = "https://github.com/lizunmvn/geoip2-rs-awdb"
documentation = "https://docs.rs/geoip2-awdb"
repository = "https://github.com/lizunmvn/geoip2-rs-awdb"
license = "MIT"
edition = "2021"
exclude = ["testdata"]

[features]
default = []
unsafe-str = []

[dependencies]
geoip2-codegen = "0.1.5"

[workspace]
members = [".", "codegen"]

[patch.crates-io]
geoip2-codegen = { path = "codegen" }

[dev-dependencies]
maxminddb = "0.24.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[[test]]
name = "geoip"

[[test]]
name = "dbip"

# add .awdb file to test
[[test]]
name = "awdb"

[[bench]]
name = "geoip"
