[package]
name = "geoip2-awdb-codegen"
version = "0.1.6"
authors = ["IncSW <dev@incsw.in>", "geoip2-awdb contributors"]
description = "geoip2 macros"
readme = "README.md"
homepage = "https://github.com/lizunmvn/geoip2-rs-awdb"
documentation = "https://docs.rs/geoip2-awdb-codegen"
repository = "https://github.com/lizunmvn/geoip2-rs-awdb"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.55", features = ["full", "extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"
